--- a/3_GAME/resources/game_stage.fxml
+++ b/3_GAME/resources/game_stage.fxml
@@ -64,10 +64,17 @@
     <right>
         <VBox alignment="TOP_CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="352.0" prefWidth="233.0" spacing="30.0" BorderPane.alignment="CENTER">
             <children>
-                <Label fx:id="shipsLabel" text="ruch" textAlignment="CENTER">
+                <Label fx:id="gameModeLabel" text="Tryb gry" textAlignment="CENTER">
                     <font>
-                        <Font size="18.0" />
-                    </font></Label>
+                        <Font name="System Bold" size="18.0" />
+                    </font>
+            </Label>
+            <Label fx:id="gameModeValue" text="Komputer vs Komputer">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Button fx:id="changeGameModeButton" mnemonicParsing="false" text="Zmień tryb gry" />
             <Button fx:id="nextMoveButton" mnemonicParsing="false" text="Następny ruch" />
             </children>
             <BorderPane.margin>
