--- a/3_GAME/resources/game_stage.fxml
+++ b/3_GAME/resources/game_stage.fxml
@@ -76,6 +76,19 @@
             </Label>
             <Button fx:id="changeGameModeButton" mnemonicParsing="false" text="Zmień tryb gry" />
             <Button fx:id="nextMoveButton" mnemonicParsing="false" text="Następny ruch" />
+            <VBox fx:id="algorithmVBox" alignment="TOP_CENTER" prefHeight="64.0" prefWidth="213.0" spacing="5.0">
+               <children>
+                  <Label text="Algorytm" />
+                  <RadioButton fx:id="minMaxRadioButton" mnemonicParsing="false" text="min-max" />
+                  <RadioButton fx:id="alfaBetaRadioButton" mnemonicParsing="false" text="alfa-beta" />
+               </children>
+            </VBox>
+            <VBox fx:id="minMaxDepthVBox" alignment="CENTER" prefHeight="200.0" prefWidth="100.0" visible="false">
+               <children>
+                  <Label text="Głębokość drzewa" />
+                  <Slider fx:id="minMaxDepthSlider" blockIncrement="1.0" majorTickUnit="1.0" max="6.0" min="1.0" minorTickCount="1" showTickLabels="true" snapToTicks="true" value="5.0" />
+               </children>
+            </VBox>
             </children>
             <BorderPane.margin>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
